--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Iniciar sesión</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+<script src="token.js"></script>
+
 </head>
 <body>
-  <h1>Iniciar sesión</h1>
-  <form id="login-form">
-    <label for="username">Nombre de usuario:</label>
-    <input type="text" id="username" name="username"><br><br>
-    <label for="password">Contraseña:</label>
-    <input type="password" id="password" name="password"><br><br>
-    <button type="submit">Iniciar sesión</button>
-  </form>
-  <div id="token-container"></div>
-
-  <script src="token.js"></script>
-</body>
+    <h1>Iniciar sesión</h1>
+    <form id="login-form">
+      <label for="correo">Nombre de usuario:</label>
+      <input type="text" id="correo" name="correo"><br><br>
+      <label for="contraseña">Contraseña:</label>
+      <input type="contraseña" id="contraseña" name="contraseña"><br><br>
+      <button type="submit">Iniciar sesión</button>
+    </form>
+    <div id="token-container"></div>
+  
+    <script src="token.js"></script>
+  </body>
 </html>
